playbooks/macos/k8s/sample/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: larambla
  name: larambla-deployment
  labels:
    app: larambla
spec:
  replicas: 3
  selector:
    matchLabels:
      app: larambla-member-api
  template:
    metadata:
      labels:
        app: larambla-member-api
    spec:
      containers:
      - name: larambla-member-api
        image: dkr.ecr.ap-northeast-2.amazonaws.com/larambla:latest
        ports:
        - containerPort: 8080
