playbooks/macos/k8s/sample/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: larambla
  name: larambla-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: larambla.co.kr
    http:
      paths:
      - path: /member/(.*)
        pathType: Prefix
        backend:
          service:
            name: larambla-service-member-api
            port:
              number: 80
  ingressClassName: nginx
